<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.incode.welcome_sdk.views.IncodeTextView android:id="@id/tvTitle" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="36.0dip" android:text="@string/onboard_sdk_signature_title" android:layout_marginStart="@dimen/onboard_sdk_standard_margins" android:layout_marginEnd="@dimen/onboard_sdk_standard_margins" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/onboard_sdk_Headline2" />
    <com.incode.welcome_sdk.views.IncodeTextView android:id="@id/tvDescription" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/onboard_sdk_signature_description" android:layout_marginStart="@dimen/onboard_sdk_standard_margins" android:layout_marginEnd="@dimen/onboard_sdk_standard_margins" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvTitle" style="@style/onboard_sdk_Headline4" />
    <com.incode.welcome_sdk.commons.ui.SignatureView android:id="@id/signature" android:background="@drawable/onboard_sdk_border_signature" android:clickable="true" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="24.0dip" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintBottom_toTopOf="@id/btnClear" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvDescription" app:layout_constraintVertical_chainStyle="spread" />
    <com.incode.welcome_sdk.views.IncodeTextView android:id="@id/tvSignHere" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/onboard_sdk_signature_sign_here" android:alpha="0.3" app:layout_constraintBottom_toBottomOf="@id/signature" app:layout_constraintEnd_toEndOf="@id/signature" app:layout_constraintStart_toStartOf="@id/signature" app:layout_constraintTop_toTopOf="@id/signature" style="@style/onboard_sdk_Headline2" />
    <com.incode.welcome_sdk.views.IncodeButton android:enabled="false" android:id="@id/btnClear" android:text="@string/onboard_sdk_signature_btn_clear_canvas" app:layout_constraintBottom_toTopOf="@id/btnDone" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/signature" style="@style/onboard_sdk_ButtonTextBig" />
    <com.incode.welcome_sdk.views.IncodeButton android:enabled="false" android:id="@id/btnDone" android:layout_marginTop="20.0dip" android:layout_marginBottom="40.0dip" android:text="@string/onboard_sdk_signature_btn_done" android:layout_marginStart="@dimen/onboard_sdk_btn_margins" android:layout_marginEnd="@dimen/onboard_sdk_btn_margins" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/btnClear" style="@style/onboard_sdk_ButtonPrimaryBig" />
    <ProgressBar android:id="@id/loader" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="?android:progressBarStyle" />
</androidx.constraintlayout.widget.ConstraintLayout>
