<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.fanduel.formation.views.components.FDDropdownField android:id="@id/fdDropdownField1" android:layout_width="fill_parent" android:layout_height="wrap_content" app:label="@string/all_label" style="@style/Formation.DropdownField.Condensed" />
    <com.fanduel.formation.views.components.FDDropdownField android:id="@id/fdDropdownField2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" app:label="@string/all_label" app:placeholderText="Placeholder" style="@style/Formation.DropdownField.Condensed" />
    <com.fanduel.formation.views.components.FDDropdownField android:id="@id/fdDropdownField3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" app:helperMessage="@string/helper_text_example" app:label="@string/all_label" app:placeholderText="Placeholder" style="@style/Formation.DropdownField.Condensed" />
    <com.fanduel.formation.views.components.FDDropdownField android:id="@id/fdDropdownField4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" app:error="@string/error_message" app:label="@string/all_label" style="@style/Formation.DropdownField.Condensed" />
    <com.fanduel.formation.views.components.FDDropdownField android:id="@id/fdDropdownField5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" app:error="@string/error_message" app:label="@string/all_label" app:placeholderText="Placeholder Text" style="@style/Formation.DropdownField.Condensed" />
    <com.fanduel.formation.views.components.FDDropdownField android:enabled="false" android:id="@id/fdDropdownField6" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" app:label="@string/all_label" app:placeholderText="Placeholder Text" style="@style/Formation.DropdownField.Condensed" />
</LinearLayout>
